--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+config = { version = "0.10.1", features = ["toml"] }
 darkredis = "0.6.1"
 futures = "0.3.4"
 lazy_static = "1.4.0"
+num_cpus = "1.12.0"
+quick-error = "1.2.3"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.47"
 tokio = { version = "0.2.11", features = ["full"] }
