--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,21 @@
-language: rust
-rust:
-  - stable
-before_script:
-  - rustup component add rustfmt
-script:
-  - cargo test
-  - cargo fmt -- --check
+matrix:
+  include:
+    - language: rust
+      rust:
+        - stable
+      before_script:
+        - rustup component add rustfmt
+      script:
+        - cargo test
+        - cargo fmt -- --check
+    - language: nodejs
+      node_js:
+        - 13.8
+      install:
+        - npm install
+        - npm install -g js-beautify
+      script:
+        - js-beautify --type js -rf dist/*.js
+        - js-beautify --type css -rf dist/*.css
+        - js-beautify --type html -rf dist/*.html
+        - git diff --exit-code
