Set up vue.js with webpack

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
       script:
         - cargo test
         - cargo fmt -- --check
-    - language: nodejs
+    - language: node_js
       node_js:
         - 13.8
       install:
