--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.19.2",
+    "vue": "^2.6.11"
+  },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.6",
