--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,11 @@ matrix:
   include:
     - language: rust
       rust:
-        - stable
-      before_script:
-        - rustup component add rustfmt
+        - nightly
       script:
         - cargo test
-        - cargo fmt -- --check
+      services:
+        - redis-server
     - language: node_js
       node_js:
         - 13.8
