--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,13 @@ tokio = { version = "0.2.11", features = ["full"] }
 tracing = "0.1.12"
 tracing-futures = "0.2.1"
 tracing-subscriber = "0.2.0"
-warp = "0.2.1"
+rocket = { git = "https://github.com/SergioBenitez/Rocket/", branch = "async" }
+
+[dependencies.rocket_contrib]
+git = "https://github.com/SergioBenitez/Rocket"
+branch = "async"
+features = ["json"]
+default-features = false
+
+# [dev-dependencies]
+# reqwest = "0.10.1"
