--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
-    "vue": "^2.6.11"
+    "css-loader": "^3.4.2",
+    "vue": "^2.6.11",
+    "vue-style-loader": "^4.1.2"
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
     "prettier": "1.19.1",
+    "vue-loader": "^15.9.0",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   }
