--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "1.19.1",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   }
