--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
       rust:
         - nightly
       script:
-        - cargo test
+        - cargo test -- --test-threads 1
       services:
         - redis-server
     - language: node_js
