--- a/config/default.toml
+++ b/config/default.toml
@@ -2,9 +2,7 @@
 # Instead, add overrides to local.toml. Use this file as a template.
 
 [redis]
-# Redis instance address, defaults to 127.0.0.1
-address = "127.0.0.1"
-# Redis port, defaults to 6379
-port = 6379
+# Redis instance address, defaults to 127.0.0.1:6379
+address = "localhost:6379"
 # OPTIONAL: password
 # passowrd = "cool-password"
