--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,25 +7,21 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-config = { version = "0.10.1", features = ["toml"] }
+config = { version = "0.10.1", default-features = false, features = ["toml"] }
 darkredis = "0.6.1"
+env_logger = "0.7.1"
 futures = "0.3.4"
 lazy_static = "1.4.0"
+log = "0.4.8"
 num_cpus = "1.12.0"
 quick-error = "1.2.3"
+rocket = { git = "https://github.com/SergioBenitez/Rocket/", branch = "async" }
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.47"
 tokio = { version = "0.2.11", features = ["full"] }
-tracing = "0.1.12"
-tracing-futures = "0.2.1"
-tracing-subscriber = "0.2.0"
-rocket = { git = "https://github.com/SergioBenitez/Rocket/", branch = "async" }
 
 [dependencies.rocket_contrib]
 git = "https://github.com/SergioBenitez/Rocket"
 branch = "async"
 features = ["json"]
 default-features = false
-
-# [dev-dependencies]
-# reqwest = "0.10.1"
