--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-style-loader": "^4.1.2"
   },
   "devDependencies": {
+    "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "vue-loader": "^15.9.0",
     "vue-template-compiler": "^2.6.11",
