--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "private": true,
   "scripts": {
+    "serve": "npx webpack-dev-server --env",
+    "build_prod": "npx webpack-cli --mode production --env.production --progress",
+    "build": "npx webpack-cli --mode development --env --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,10 +20,11 @@
   "devDependencies": {
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "1.19.1",
     "vue-loader": "^15.9.0",
     "vue-template-compiler": "^2.6.11",
-    "prettier": "1.19.1",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
