--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,16 @@ jobs:
   include:
   - stage: test
     language: rust
+    os: linux
     rust: nightly
+    before_install:
+    - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable -y
+    - sudo apt-get update
+    - sudo apt-get install -y libgdal-dev
+    - export GDAL_STATIC=1
     script:
-    - cargo test -- --test-threads 1
+    - cargo build --workspace
+    - cargo test --workspace -- --test-threads 1
     services:
     - redis
   - stage: test
@@ -24,10 +31,14 @@ jobs:
         -in travis_id_rsa.enc -out ./travis_id_rsa -d
       - chmod 600 travis_id_rsa
       - echo "$SERVER_PUBLIC_SSH" >> $HOME/.ssh/known_hosts
+      - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable -y
+      - sudo apt-get update
+      - sudo apt-get install libgdal-dev
     install:
       - npm i
       - npm i webpack-cli
     script:
+      - export GDAL_STATIC=1
       - cargo build --release
       - npx webpack-cli --mode production
       - ssh -i travis_id_rsa staging@laps.website sudo systemctl stop staging.service
@@ -44,10 +55,14 @@ jobs:
         -in travis_id_rsa.enc -out ./travis_id_rsa -d
       - chmod 600 travis_id_rsa
       - echo "$SERVER_PUBLIC_SSH" >> $HOME/.ssh/known_hosts
+      - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable -y
+      - sudo apt-get update
+      - sudo apt-get install libgdal-dev
     install:
       - npm i
       - npm i webpack-cli
     script:
+      - export GDAL_STATIC=1
       - cargo build --release
       - npx webpack-cli --mode production
       - ssh -i travis_id_rsa production@laps.website sudo systemctl stop production.service
