--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ jobs:
       - echo "$SERVER_PUBLIC_SSH" >> $HOME/.ssh/known_hosts
       - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable -y
       - sudo apt-get update
-      - sudo apt-get install libgdal-dev
+      - sudo apt-get install -y libgdal-dev
     install:
       - npm i
       - npm i webpack-cli
@@ -57,7 +57,7 @@ jobs:
       - echo "$SERVER_PUBLIC_SSH" >> $HOME/.ssh/known_hosts
       - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable -y
       - sudo apt-get update
-      - sudo apt-get install libgdal-dev
+      - sudo apt-get install -y libgdal-dev
     install:
       - npm i
       - npm i webpack-cli
