--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,14 @@ futures = "0.3.4"
 laps_convert = { path = "laps_convert"}
 lazy_static = "1.4.0"
 log = "0.4.8"
+multipart = { default-features = false, version = "0.16.1", features = ["server"] }
 num_cpus = "1.12.0"
 quick-error = "1.2.3"
 rand = "0.7.3"
 rocket = { git = "https://github.com/SergioBenitez/Rocket/", branch = "async" }
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.47"
+tempfile = "3.1.0"
 tokio = { version = "0.2.11", features = ["full"] }
 
 [dependencies.rocket_contrib]
@@ -31,6 +33,11 @@ git = "https://github.com/SergioBenitez/Rocket"
 branch = "async"
 features = ["json"]
 default-features = false
+
+[dev-dependencies.multipart]
+default-features = false
+features = ["server", "client"]
+version = "0.16.1"
 
 [profile.dev.package.png]
 opt-level = 3
