--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [ "laps_convert", "laps_convert_cli" ]
 
 [dependencies]
 base64 = "0.12.0"
+blake2 = "0.8.1"
 config = { version = "0.10.1", default-features = false, features = ["toml"] }
 darkredis = "0.7.0"
 env_logger = "0.7.1"
