--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ futures = "0.3.4"
 lazy_static = "1.4.0"
 log = "0.4.8"
 num_cpus = "1.12.0"
+png = "0.16.1"
 quick-error = "1.2.3"
 rand = "0.7.3"
 rocket = { git = "https://github.com/SergioBenitez/Rocket/", branch = "async" }
