--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,16 @@ jobs:
     os: linux
     rust: nightly
     before_install:
-    - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable -y
-    - sudo apt-get update
-    - sudo apt-get install -y libgdal-dev
-    - export GDAL_STATIC=1
+      - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable -y
+      - sudo apt-get update
+      - sudo apt-get install -y libgdal-dev
+      - export GDAL_STATIC=1
     script:
-    - cargo build --workspace
-    - cargo test --workspace -- --test-threads 1
+      - cargo build --workspace
+      - cargo test --workspace -- --test-threads 1
     services:
-    - redis
+      - redis
+      - docker
   - stage: test
     language: node_js
     node_js: 13.8
