--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [ "laps_convert", "laps_convert_cli" ]
 [dependencies]
 base64 = "0.12.0"
 blake2 = "0.8.1"
+bollard = "0.5.0"
 config = { version = "0.10.1", default-features = false, features = ["toml"] }
 darkredis = "0.7.0"
 env_logger = "0.7.1"
@@ -27,6 +28,7 @@ rand = "0.7.3"
 rocket = { git = "https://github.com/SergioBenitez/Rocket/", branch = "async" }
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.47"
+mime = "*"
 tempfile = "3.1.0"
 tokio = { version = "0.2.11", features = ["full"] }
 
