--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ rand = "0.7.3"
 rocket = { git = "https://github.com/SergioBenitez/Rocket/", branch = "async" }
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.47"
-mime = "*"
+mime = "0.2.6"
 tempfile = "3.1.0"
 tokio = { version = "0.2.11", features = ["full"] }
 
