--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ futures = "0.3.4"
 laps_convert = { path = "laps_convert"}
 lazy_static = "1.4.0"
 log = "0.4.8"
+mime = "0.2.6"
 multipart = { default-features = false, version = "0.16.1", features = ["server"] }
 num_cpus = "1.12.0"
 png = "0.16.1"
@@ -28,7 +29,7 @@ rand = "0.7.3"
 rocket = { git = "https://github.com/SergioBenitez/Rocket/", branch = "async" }
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.47"
-mime = "0.2.6"
+tar = "0.4.26"
 tempfile = "3.1.0"
 tokio = { version = "0.2.11", features = ["full"] }
 
