--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [ "laps_convert", "laps_convert_cli" ]
 base64 = "0.12.0"
 blake2 = "0.8.1"
 bollard = "0.5.0"
+byteorder = "1.3.4"
 config = { version = "0.10.1", default-features = false, features = ["toml"] }
 darkredis = "0.7.0"
 env_logger = "0.7.1"
@@ -33,11 +34,15 @@ tar = "0.4.26"
 tempfile = "3.1.0"
 tokio = { version = "0.2.11", features = ["full"] }
 
+
 [dependencies.rocket_contrib]
 git = "https://github.com/SergioBenitez/Rocket"
 branch = "async"
 features = ["json", "serve"]
 default-features = false
+
+[dev-dependencies]
+gdal = { version = "0.6.0", features = ["gdal_2_2", "bindgen"] }
 
 [dev-dependencies.multipart]
 default-features = false
