--- a/.travis.yml
+++ b/.travis.yml
@@ -25,56 +25,28 @@ jobs:
       - bash ./format.sh check
       - npm run build
   - stage: deploy staging
-    language: rust
+    language: node_js
+    node_js: 12.16
     os: linux
-    dist: bionic
-    rust: nightly
+    services:
+      - docker
     before_install:
-      - nvm install 12.16
       - openssl aes-256-cbc -K $encrypted_be519dac41c7_key -iv $encrypted_be519dac41c7_iv
         -in travis_id_rsa.enc -out ./travis_id_rsa -d
       - chmod 600 travis_id_rsa
       - echo "$SERVER_PUBLIC_SSH" >> $HOME/.ssh/known_hosts
-      - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable -y
-      - sudo apt-get update
-      - sudo apt-get install -y libgdal-dev
     install:
       - npm i
       - npm i webpack-cli
     script:
-      - export GDAL_STATIC=1
-      - cargo build --release || exit 1
       - npm run build_prod || exit 1
+      - docker build . -t laps-build || exit 1
+      - docker run --name laps-build -it laps-build || exit 1
+      - docker cp laps-build:/workdir/target/release/laps . || exit 1
       - ssh -i travis_id_rsa staging@laps.website sudo systemctl stop staging.service || exit 1
-      - scp -r -i travis_id_rsa dist config target/release/laps Rocket.toml staging@laps.website:~ || exit 1
+      - scp -r -i travis_id_rsa dist config laps Rocket.toml staging@laps.website:~ || exit 1
       - ssh -i travis_id_rsa staging@laps.website sudo systemctl restart staging.service || exit 1
-  - stage: deploy production
-    language: rust
-    rust: nightly
-    os: linux
-    dist: bionic
-    before_install:
-      - nvm install 12.16
-      - openssl aes-256-cbc -K $encrypted_be519dac41c7_key -iv $encrypted_be519dac41c7_iv
-        -in travis_id_rsa.enc -out ./travis_id_rsa -d
-      - chmod 600 travis_id_rsa
-      - echo "$SERVER_PUBLIC_SSH" >> $HOME/.ssh/known_hosts
-      - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable -y
-      - sudo apt-get update
-      - sudo apt-get install -y libgdal-dev
-    install:
-      - npm i
-      - npm i webpack-cli
-    script:
-      - export GDAL_STATIC=1
-      - cargo build --release || exit 1
-      - npm run build_prod || exit 1
-      - ssh -i travis_id_rsa production@laps.website sudo systemctl stop production.service || exit 1
-      - scp -r -i travis_id_rsa dist config target/release/laps Rocket.toml production@laps.website:~ || exit 1
-      - ssh -i travis_id_rsa staging@laps.website sudo systemctl restart production.service || exit 1
 stages:
   - test
   - name: deploy staging
     if: branch = staging
-  - name: deploy production
-    if: branch = production
