[backend] Import map metadata
This commit allows clients to look at metadata for a given map ID. We no
longer throw all the metadata away when doing the conversion, we also
keep it around in a separate key indexed the same way as the map data.
This meant we had to change laps.mapdata into laps.mapdata.image.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ features = ["json", "serve"]
 default-features = false
 
 [dev-dependencies]
+approx = "0.3.2"
 gdal = { version = "0.6.0", features = ["gdal_2_2", "bindgen"] }
 
 [dev-dependencies.multipart]
