--- a/laps_convert/Cargo.toml
+++ b/laps_convert/Cargo.toml
@@ -12,3 +12,5 @@ gdal = { version = "0.6.0", features = ["gdal_2_2", "bindgen"] }
 log = "0.4.8"
 png = "0.16.1"
 quick-error = "1.2.3"
+serde = { version = "1.0.106", features = ["derive"] }
+serde_json = "1.0.51"
