--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [ "laps_convert", "laps_convert_cli" ]
 
 [dependencies]
 base64 = "0.12.0"
-blake2 = "0.8.1"
+bcrypt = "0.7.0"
 bollard = "0.5.0"
 byteorder = "1.3.4"
 config = { version = "0.10.1", default-features = false, features = ["toml"] }
