--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ members = [ "laps_convert", "laps_convert_cli" ]
 
 [dependencies]
 base64 = "0.12.0"
-blake2 = "0.8.1"
 bollard = "0.5.0"
 byteorder = "1.3.4"
 config = { version = "0.10.1", default-features = false, features = ["toml"] }
@@ -28,6 +27,7 @@ png = "0.16.1"
 quick-error = "1.2.3"
 rand = "0.7.3"
 rocket = { git = "https://github.com/SergioBenitez/Rocket/", branch = "async" }
+rust-argon2 = "0.8.2"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.47"
 tar = "0.4.26"
