--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ default-features = false
 
 [dev-dependencies]
 gdal = { version = "0.6.0", features = ["gdal_2_2", "bindgen"] }
+serial_test = "0.4.0"
 
 [dev-dependencies.multipart]
 default-features = false
