--- a/config/test.toml
+++ b/config/test.toml
@@ -10,3 +10,8 @@ result_timeout = 1
 #make this smaller to make testing much easier
 max_polling_clients = 2
 additional_connections = 1
+
+[login]
+#Make the password lengths smaller so the tests are easier to read
+minimum_password_length = 4
+maximum_password_length = 8
