--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [ "laps_convert", "laps_convert_cli" ]
 base64 = "0.12.0"
 bollard = "0.5.0"
 byteorder = "1.3.4"
+chrono = "0.4.11"
 config = { version = "0.10.1", default-features = false, features = ["toml"] }
 darkredis = "0.7.0"
 env_logger = "0.7.1"
