--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+# .travis.yml: Travis CI configuration, with continous deployment
+# Author: Håkon Jordet
+# Copyright (c) 2020 LAPS Group
+# Distributed under the zlib licence, see LICENCE.
+
 jobs:
   include:
   - stage: test
