--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,3 +1,8 @@
+# Rocket.toml: Rocket config file for the backend.
+# Author: Håkon Jordet
+# Copyright (c) 2020 LAPS Group
+# Distributed under the zlib licence, see LICENCE.
+
 [staging]
 address = "0.0.0.0"
 port = 8001
