--- a/laps_module_runner/Dockerfile
+++ b/laps_module_runner/Dockerfile
@@ -1,3 +1,8 @@
+# laps_module_runner/Dockerfile: Dockerfile used to build pathfinding module images
+# Author: Håkon Jordet
+# Copyright (c) 2020 LAPS Group
+# Distributed under the zlib licence, see LICENCE.
+
 FROM amd64/python:slim-buster
 RUN apt-get update
 RUN apt-get upgrade -y
